# sglang

./: README.md  pyproject.toml
.github/workflows/: pr-test.yml
benchmark/kernels/fused_moe_triton/: benchmark_deepgemm_moe.py
docker/: Dockerfile
docs/hardware/: nvidia_jetson.md
docs/start/: install.md
docs/supported_models/: transformers_fallback.md
python/: pyproject.toml
python/sglang/: bench_one_batch_server.py  bench_serving.py  launch_server.py
python/sglang/srt/: conversation.py  server_args.py
python/sglang/srt/disaggregation/: decode.py  decode_schedule_batch_mixin.py
python/sglang/srt/entrypoints/: http_server.py
python/sglang/srt/entrypoints/openai/: serving_base.py
python/sglang/srt/layers/: communicator.py
python/sglang/srt/layers/moe/: topk.py
python/sglang/srt/layers/moe/ep_moe/: layer.py
python/sglang/srt/layers/quantization/: modelopt_quant.py
python/sglang/srt/lora/: layers.py  lora.py  lora_manager.py  mem_pool.py  utils.py
python/sglang/srt/managers/: detokenizer_manager.py  io_struct.py  schedule_batch.py  scheduler.py  scheduler_output_processor_mixin.py  tokenizer_manager.py
python/sglang/srt/models/: deepseek_v2.py  gemma2.py  gemma3n_mm.py  glm4_moe.py  gpt_oss.py  granite.py  llama.py  qwen3_moe.py  torch_native_llama.py
python/sglang/test/: test_utils.py
sgl-kernel/: CMakeLists.txt
sgl-kernel/csrc/: common_extension.cc
sgl-kernel/include/: sgl_kernel_ops.h
sgl-kernel/python/sgl_kernel/: __init__.py  moe.py
test/srt/: run_suite.py  test_mla_deepseek_v3.py  test_nightly_gsm8k_eval.py
(+4 files in other folders)
